; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_component_set_actual_download_size.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_component_set_actual_download_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifcomponent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @component_set_actual_download_size(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cifcomponent*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.cifcomponent* @impl_from_ICifComponent(i32* %6)
  store %struct.cifcomponent* %7, %struct.cifcomponent** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.cifcomponent*, %struct.cifcomponent** %5, align 8
  %10 = getelementptr inbounds %struct.cifcomponent, %struct.cifcomponent* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}

declare dso_local %struct.cifcomponent* @impl_from_ICifComponent(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
